## Release v0.9.1 (05 Sept. 2025)
- `into_arr`, `from_arr`, `map`, `zip_map` are now public on `WideF32x4`, `WideF32x8` and `WideF64x4`.
- `from_arr` and `into_arr` are now public on `WideBoolF32x4`, `WideBoolF32x8`, `WideBoolF64x4`.
- Use SIMD implementations of `WideBool*` methods `all`, `any`, and `none`.
- Inline more `AutoSimd` methods.

## Release v0.9.0 (22 June 2023)
- The `cuda` feature has been removed, as the toolchain it depends on is long abandoned.
- The `packed_simd` feature has been removes as it has been incompatible with the `nightly` compiler for several months.
  Consider using the `portable_simd` feature instead.
- Add the `portable_simd` feature for supporting `std::simd`.
- The `ClosedAdd, ClosedMul, etc.` traits no longer require `AddAssign, MulAssign`. Instead they are required for new
  traits named `ClosedAddAssign, ClosedMulAssign, etc.`
- The `ComplexField` and `SimdComplexField` (and, by extension, `RealField` and `SimdRealField`) traits now depend on the
  `SupersetOf<f32>` trait in addition to `SupersetOf<f64>`.
- Replace the `SimdValue::lanes()` function by an associated constant `SimdValue::LANES`.
- Add `ZERO` and `ONE` associated consts to all the simd newtypes.
- Implement `Default` for all simd newtypes.

## Release v0.8.1 (04 Apr. 2023)
- Add implementation of `rkyv` serialization/deserialization to the `Wide*` wrapper types.

## Release v0.8.0 (14 Jan. 2023)
- When `rkyv` support is enabled, the archived version of `AutoSimd` and `AutoBoolSimd` are themselves. The
 `ArchivedAutoSimd` and `ArchivedAutoBoolSimd` types are no longer generated.

## Release v0.7.3 (30 Oct. 2022)
- Cuda: implement DeviceCopy for AutoSimd
- Implement `Distribution` (for random number generation) for SIMD types.

## Release v0.7.2 (30 July 2022)
- Add the optional types `WideF64x4` and `WideBoolF64x4` for 4-lanes SIMD 64-bits float operations based on
  the `wide` crate.